--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <h4>Equalizar</h4>
         </div>
         <div class="descricao">
-            <img src="imagens/fundo2.jpg" height="220px" width="340px" alt="">
-            <h4>Title</h4>
+            <img src="imagens/fundo2.jpg" height="200vh" width="260vh" alt="">
+            <h5>Title</h5>
             <p class="artist">Artist</p>
         </div>
         <div class="duracao">
@@ -56,8 +56,5 @@
         <audio src="musicas/capital-inicial-só-chove.mp3"></audio>
         <script src="index.js"></script>
     </div>
-
-
-    
 </body>
 </html>
